@@ -9,6 +9,7 @@ Jimmy Zhou <jimmyzhou@users.sourceforge.net>
 		   defined. Thanks to Yoshihiko Kashio.
 		4. Disable slave macros in the macro chains if the first (master)
 		   macro is defined as dummy.
+		5. Fix off-focus fading. Thanks to Ken Zalewski for the report.
 
 	* Enhancements:
 		1. Add --with-max-profiles to configure script as suggested
